--- a/src/app/views/menu-hamburger/menu-hamburger.component.html
+++ b/src/app/views/menu-hamburger/menu-hamburger.component.html
@@ -13,6 +13,8 @@
       <li><a routerLink="/dashboard" routerLinkActive="active">Dashboard</a></li>
       <li><a routerLink="/agenda" routerLinkActive="active">Agendar</a></li>
       <li><a routerLink="/pacientes"  routerLinkActive="active">Pacientes</a></li>
+      <li><a routerLink="/registrarse"  routerLinkActive="active">Registrarse</a></li>
+      <li><a routerLink="/welcome"  routerLinkActive="active">Welcome</a></li>
       <li><a aria-disabled="true" href="#" class="disabled">Historiales Clínicos</a></li>
       <li><a aria-disabled="true" href="#" class="disabled">Configuración</a></li>
       <li><a aria-disabled="true" href="#" class="disabled">Cerrar sesión</a></li>
