--- a/src/app/views/menu-hamburger/menu-hamburger.component.html
+++ b/src/app/views/menu-hamburger/menu-hamburger.component.html
@@ -18,6 +18,8 @@
       <li><a aria-disabled="true" href="#" class="disabled">Historiales Clínicos</a></li>
       <li><a aria-disabled="true" href="#" class="disabled">Configuración</a></li>
       <li><a aria-disabled="true" href="#" class="disabled">Cerrar sesión</a></li>
+
+      <li (click)="logout()"><a  href="#" routerLinkActive="active">Cerrar sesión</a></li>
     </ul>
   </div>
 </div>
