--- a/src/app/views/login/login.component.scss
+++ b/src/app/views/login/login.component.scss
@@ -10,6 +10,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    .main-containter-go {
+      width: 100%;
+    }
   }
   
   h2 {
@@ -31,14 +35,14 @@
   
   input.form-control {
     width: 100%;
-    padding: 10px;
+    padding: 10px 0;
     margin-top: 5px;
     border-radius: 5px;
     border: 1px solid #ddd;
   }
   
   button.btn-primary {
-    width: 100%;
+    width: 40%;
     padding: 12px;
     background-color: #007bff;
     color: white;
@@ -77,6 +81,11 @@
     border: 1px solid #ddd;
   }
   
+  .btn-container {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+  }
   /* Responsividad para pantallas más pequeñas (móviles) */
   @media (max-width: 767px) {
     .login-container {
