--- a/src/app/views/patients/patients.component.html
+++ b/src/app/views/patients/patients.component.html
@@ -13,53 +13,31 @@
     <div *ngFor="let patient of patients" class="patient-card">
       <mat-card>
         <mat-card-header>
-          <mat-card-title>{{ patient.name }}</mat-card-title>
-          <mat-card-subtitle>Edad: {{ patient.age }} | Género: {{ patient.gender }}</mat-card-subtitle>
+          <mat-card-title>{{getFullName(patient)}}</mat-card-title>
+          <mat-card-subtitle>Edad: 7 | Género: M</mat-card-subtitle>
         </mat-card-header>
 
         <mat-card-content>
-          <p><strong>ID:</strong> {{ patient.id }}</p>
+          <!--
+          <p><strong>ID:</strong> {{ patient.id }}</p>        
           <p><strong>Historial Médico:</strong> {{ patient.medicalHistory }}</p>
-          <div *ngIf="patient.appointments && patient.appointments.length > 0">
+          <div *ngIf="patient.person.">
             <h5>Citas Previas:</h5>
             <ul>
               <li *ngFor="let appointment of patient.appointments">{{ appointment.date }} - {{ appointment.description }}</li>
             </ul>
-          </div>
-          <div class="action-buttons">
+          </div>    
+          -->
+          <div class="action-buttons">          
+            <button mat-button [routerLink]="['/agenda', patient.patientId]">Agendar</button>          
             <button mat-button (click)="viewPatientDetails(patient)">Ver Detalles</button>
             <button mat-button (click)="editPatient(patient)">Editar</button>
-            <button mat-button color="warn" (click)="deletePatient(patient.id)">Eliminar</button>
+            <button mat-button color="warn" (click)="deletePatient(patient.patientId)">Eliminar</button>
           </div>
         </mat-card-content>
       </mat-card>
     </div>
-  </div>
-
-  <!-- Modal de detalles del paciente -->
-  <div class="patient-details-modal" *ngIf="selectedPatient">
-    <div class="modal-content">
-      <h3>Detalles del Paciente: {{ selectedPatient.name }}</h3>
-      <div class="patient-info">
-        <p><strong>ID:</strong> {{ selectedPatient.id }}</p>
-        <p><strong>Edad:</strong> {{ selectedPatient.age }}</p>
-        <p><strong>Género:</strong> {{ selectedPatient.gender }}</p>
-        <p><strong>Historial Médico:</strong> {{ selectedPatient.medicalHistory }}</p>
-        <h4>Citas Previas</h4>
-        <ul>
-          <li *ngFor="let appointment of selectedPatient.appointments">{{ appointment.date }} - {{ appointment.description }}</li>
-        </ul>
-        <h4>Documentos Médicos</h4>
-        <ul>
-          <li *ngFor="let document of selectedPatient.documents">
-            <a href="{{ document.url }}" target="_blank">{{ document.name }}</a>
-          </li>
-        </ul>
-      </div>
-      <button (click)="scheduleAppointment()">Agendar Cita</button>
-      <button (click)="closeDetails()">Cerrar</button>
-    </div>
-  </div>
+  </div>  
 
   <!-- Modal para agregar o editar paciente -->
   <div class="add-edit-patient-modal" *ngIf="isModalOpen">
